--- a/L100/book club part 8.html
+++ b/L100/book club part 8.html
@@ -13,7 +13,7 @@
             <!--heading--> 
             <header>
                 <h1>
-                    WELCOME TO THE BEE CLUB📚📔📖 
+                    WELCOME TO THE BEE CLUB
                 </h1>
                 <img src="books.jpeg" alt="list of books" width="300">
             </header>
@@ -45,11 +45,10 @@
                     <div id="teachers">
                         <div class="teacher-info">
                             <div>
-                                <img src="teacher1.jpeg" alt="ms Akenibo" width="300">
                             </div>
 
                             <div>
-                                <h3>Ms AKENIBO</h3>
+                                <h3>Ms SENCU</h3>
                                 <p>
                                     She teaches ABOUT BEES SHE LOVE NATURE. She has a LOT OF NATURE BAGES FOR PEOPLE WHO WAS BEING KIND TO NATURE
                                 </p>
@@ -58,11 +57,10 @@
                         
                         <div class="teacher-info">
                             <div>
-                                <img src="teacher2.jpeg" alt="ms cheabaq" width="300">
                             </div>
 
                             <div>
-                                <h3>Ms. CHEABAQ</h3>
+                                <h3>Ms. DOIPSEN</h3>
                                 <p>
                                     She IS POLISH AND LOVED HONEY THAT IS HOW SHE KNEW BEES</i>
                                 </p>
