--- a/L-97/homework cusine-1.html
+++ b/L-97/homework cusine-1.html
@@ -4,6 +4,25 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>cusine</title>
+
+        <style>
+            body{
+                /*first lesson*/
+                background-color: brown;
+            }
+
+            h2{
+                /*first lesson*/
+                background-color: darkolivegreen;
+            }
+
+            p{
+                /*first lesson*/
+                background-color: beige;
+            }
+
+
+        </style>
     </head>
     <body>
         <h2>PIZZA</h2>
