--- a/L101/homework cusine-5.html
+++ b/L101/homework cusine-5.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>cusine</title>
+
+        <!--importing external CSS-->
+        <link rel="stylesheet" href="style-cuisine.css" type="text/css">
     </head>
     <body>
         <h2>PIZZA</h2>
