--- a/L-105/L105 containers.html
+++ b/L-105/L105 containers.html
@@ -12,11 +12,11 @@
             <h1>My first bootstrap page</h1>
 
             <p>
-                This part is inside a .container class
+                My hobby is playing games watching tv and playing outside
             </p>
 
             <p>
-                The .container class provides a responsive fixed width container
+                
             </p>
         </div>
     </body>
