--- a/L-109/L109 HW About you.html
+++ b/L-109/L109 HW About you.html
@@ -6,7 +6,7 @@
         <title>About you</title>
     </head>
     <body>
-        <h2>This sentence is my name is</h2>
+        <h2>This sentence is my name is darasimi familugba</h2>
 
         <script>
             document.write("welcome to web development");
