--- a/L-113/L113 HW.html
+++ b/L-113/L113 HW.html
@@ -27,6 +27,7 @@
     <body>
         <h2>Make changes to the rectangle</h2>
         <div class= "rectangle"></div>
+        (<p>My name is dararsimi and I love pizza and chocolate</p>)p.style.color=green
         <div class = "buttons">
             <button onclick = "changeToCircle()"> Make circle</button>
             <button onclick = "hide()"> Hide</button>
