--- a/L-116/L116 HW Add more images in the slider.html
+++ b/L-116/L116 HW Add more images in the slider.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Slider in Website</title>
+        <title>Food slider</title>
     </head>
     <body>
         <section>
